[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/dialogs/confirm_dialog.gd" id="1_confirm"]

[node name="ConfirmDialog" type="Window"]
title = "确认"
initial_position = 2
size = Vector2i(350, 180)
visible = false
transient = true
script = ExtResource("1_confirm")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "确认操作"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
text = "你确定要执行此操作吗？"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
text = "取消"

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
text = "确认"
